--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <meta name="description" content="Web site created using create-react-app" />
-  <meta name="" content="..." />
-
+  <meta name="title" content="Obecník - restaurace a pizzerie Raškovice" />
+  <meta name="description" content="Jsme nová restaurace a pizzerie v beskydské přírodě v klidné části vesnice Raškovice. Specializujeme se na výrobu pravé italské pizzy z vlastního domácího těsta a vybraných italských surovin. Rozvážíme jí do obcí Morávka, Pražmo, Skalice, Krásná, Visalaje a dalšího okolí. Nabízíme také výhodné obědové menu, domácí dezerty a kvalitní kávu pražírny Laura Coffee." />
+  <meta name="Author" content="www.kolarsky.eu" />
   <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
